tests/negative/array/array_mixed_types.tx
// EXPECTED: COMPILE_ERROR
// Description: Test array initialization with mixed types.

function main() {
    // Array should have a consistent type
    let arr = [1, "2", 3]; 
}
